--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "nodemailer": "^6.9.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
+    "@types/nodemailer": "^6.4.16",
     "@types/validator": "^13.12.2",
     "eslint": "^9.10.0",
     "nodemon": "^3.1.6",
