--- a/example.env
+++ b/example.env
@@ -1,12 +1,17 @@
-PORT = 5000
-DB_USER = asdfsfa
-DB_PASSWORD = 1322545
-DB_URI = mongodb+srv://<username>:<db_password>@cluster0.08i6u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+DB_USER=
+DB_PASSWORD=
+DB_URI=mongodb+srv://<username>:<db_password>@cluster0invoice.lkt8v.mongodb.net/Cluster
+
+# JWT
+ACCESS_TOKEN=
+RESET_TOKEN_SECRET=
+ACCESS_TOKEN_EXP=1d
 
 #Bcrypt
-BCRYPT_SALT_ROUND = 10
+BCRYPT_SALT_ROUND=10
 
-# Redis
-REDIS_PORT = 
-REDIS_HOST = 
-REDIS_PASS = 
+# Mial Configaration
+MY_MAIL=
+MAIL_PASSWORD=
+MAIL_PORT=465 
