--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write src/**/*.ts"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
@@ -20,14 +20,16 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.5",
     "@types/nodemailer": "^6.4.16",
     "@types/validator": "^13.12.2",
